[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helpers"
version = "1.0.0"
description = "Commonly used helpers"
dependencies = ['codetiming', 'jupyter-autotime', 'shutil', 'numpy', 'pandas', 'matplotlib']

[tool.hatch.metadata]
allow-direct-references = true
