[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helpers"
version = "1.0.0"
description = "Commonly used helpers"
dependencies = ['codetiming', 'pretty_html_table', 'jupyter-autotime', 'numpy', 'pandas', 'matplotlib']

[tool.hatch.metadata]
allow-direct-references = true
